welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:3: error: not found: value comteur
		compteur=comteur+1
                         ^